cmake_minimum_required(VERSION 3.0.0)

project(Miner VERSION 0.1 LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)

find_package(Qt5 COMPONENTS Core Quick REQUIRED)

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)


set(GLOBAL_PROJECTS_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(GLOBAL_INCLUDE_PATH ${GLOBAL_PROJECTS_PATH}/include)

include_directories(${GLOBAL_INCLUDE_PATH})


add_subdirectory(${GLOBAL_PROJECTS_PATH}/projects)

